--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="advantages-right">
                 <p>Good design serves a purpose, communicates a message, and is aesthetically pleasing at the same time. Design is everywhere and that's why it's important to make it good. <br><br>My mission is to find design solutions that help to achieve the goals of clients and, ultimately, grow the business.</p>
                 <div class="advantages-button-cont">
-                    <a href="/works">
+                    <a href="/work">
                         <button class="advantages-button">VIEW CASES</button>
                     </a>
                 </div>
@@ -130,7 +130,7 @@
         </div>
 
         <div class="services-cards">
-            <a href="/work">
+            <a href="/services">
             <div class="card">
                 <img src="img/web.png">
                 <div>
@@ -140,7 +140,7 @@
             </div>
             </a>
 
-            <a href="/work">
+            <a href="/services">
             <div class="card">
                 <img src="img/logo.png">
                 <div>
@@ -150,7 +150,7 @@
             </div>
             </a>
 
-            <a href="/work">
+            <a href="/services">
             <div class="card">
                 <img src="img/brand.png">
                 <div>
@@ -160,7 +160,7 @@
             </div>
             </a>
 
-            <a href="/work">
+            <a href="/services">
             <div class="card">
                 <img src="img/card.png">
                 <div>
@@ -215,7 +215,7 @@
         </div>
 
         <div class="explore-button-cont">
-            <a href="/works">
+            <a href="/work">
                 <button class="explore-button">VIEW MORE</button>
             </a>
         </div>
