--- a/work.html
+++ b/work.html
@@ -28,7 +28,7 @@
 
     <div class="w-container so-row">
         <div class="w-name">
-            <h3>explore my cases</h3>
+            <h3>EXPLORE MY CASES</h3>
         </div>
 
         <div class="w-works-all">
@@ -114,6 +114,20 @@
                         <a href="/avansbox"><h3>Avansbox Web Design</h3></a>
                         <div class="view-case">
                             <a href="/avansbox">VIEW CASE
+                            <img src="img/arrow.svg"></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="w-wide-card w-card">
+                    <a href="/cls">
+                        <img class="wide-img" src="img/cls/1.jpg">
+                    </a>
+                    <div class="w-works-text">
+                        <p>Branding & Guidelines</p>
+                        <a href="/cls"><h3>Coleman Legal Services Brand Guidelines</h3></a>
+                        <div class="view-case">
+                            <a href="/cls">VIEW CASE
                             <img src="img/arrow.svg"></a>
                         </div>
                     </div>
