Desktop pre-finish

--- a/avansbox.html
+++ b/avansbox.html
@@ -34,6 +34,7 @@
         <img src="img/avansbox/7.jpg">
         <img src="img/avansbox/8.jpg">
         <img src="img/avansbox/9.jpg">
+        <img src="img/avansbox/10.jpg">
     </div>
 
     <div class="footer so-row">
