--- a/cls.html
+++ b/cls.html
@@ -32,6 +32,7 @@
         <img src="img/cls/5.jpg">
         <img src="img/cls/6.jpg">
         <img src="img/cls/7.jpg">
+        <img src="img/cls/8.jpg">
     </div>
 
     <div class="footer so-row">
