--- a/work.html
+++ b/work.html
@@ -107,7 +107,7 @@
                 
                 <div class="w-small-card w-card">
                     <a href="/avansbox">
-                        <img class="small-img" src="img/avansbox/7.jpg">
+                        <img class="small-img" src="img/avansbox/10.jpg">
                     </a>
                     <div class="w-works-text">
                         <p>UI/UX</p>
@@ -117,19 +117,19 @@
                             <img src="img/arrow.svg"></a>
                         </div>
                     </div>
-                </div>
+                </div>                
+            </div>
 
-                <div class="w-wide-card w-card">
-                    <a href="/cls">
-                        <img class="wide-img" src="img/cls/1.jpg">
-                    </a>
-                    <div class="w-works-text">
-                        <p>Branding & Guidelines</p>
-                        <a href="/cls"><h3>Coleman Legal Services Brand Guidelines</h3></a>
-                        <div class="view-case">
-                            <a href="/cls">VIEW CASE
-                            <img src="img/arrow.svg"></a>
-                        </div>
+            <div class="w-wide-card w-card">
+                <a href="/cls">
+                    <img class="wide-img" src="img/cls/main.jpg">
+                </a>
+                <div class="w-works-text">
+                    <p>Branding & Guidelines</p>
+                    <a href="/cls"><h3>Coleman Legal Services Brand Guidelines</h3></a>
+                    <div class="view-case">
+                        <a href="/cls">VIEW CASE
+                        <img src="img/arrow.svg"></a>
                     </div>
                 </div>
             </div>
