--- a/babka.html
+++ b/babka.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="case-images">
-        <img src="img/aes/main.jpg">
+        <img src="img/babka/main.jpg">
     </div>
 
     <div class="footer so-row">
