Adding new projects

--- a/aes.html
+++ b/aes.html
@@ -25,7 +25,14 @@
     </div>
 
     <div class="case-images">
-        <img src="img/aes/main.jpg">
+        <img src="img/aes/1.jpg">
+        <img src="img/aes/2.jpg">
+        <img src="img/aes/3.jpg">
+        <img src="img/aes/4.jpg">
+        <img src="img/aes/44.jpg">
+        <img src="img/aes/5.jpg">
+        <img src="img/aes/6.jpg">
+        <img src="img/aes/7.jpg">
     </div>
 
     <div class="footer so-row">
