--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
                 <hr>
                 <a href="/cls">
                     <div class="exp-2">
-                        <h1>CLS Branding Guidelines</h1>
-                        <h4>Branding</h4>
+                        <h1>CLS Brand Guidelines</h1>
+                        <h4>Branding & Guidelines</h4>
                     </div>
                     <img src="img/fanci/1.jpg" class="follow-img-2">
                 </a>
@@ -203,12 +203,12 @@
 
             <div class="explore-work">
                 <hr>
-                <a href="/otoplenych">
+                <a href="/babka">
                     <div class="exp-3">
-                        <h1>Otoplenych Web Design</h1>
-                        <h4>UI/UX</h4>
+                        <h1>Babka Bakery Brand Guidelines</h1>
+                        <h4>Branding & Guidelines</h4>
                     </div>
-                    <img src="img/sharing/1.png" class="follow-img-3">
+                    <img src="img/babka/1.jpg" class="follow-img-3">
                 </a>
                 <hr>
             </div>
