--- a/mda.html
+++ b/mda.html
@@ -25,12 +25,7 @@
     </div>
 
     <div class="case-images">
-        <img src="img/babka/1.jpg">
-        <img src="img/babka/2.jpg">
-        <img src="img/babka/3.jpg">
-        <img src="img/babka/4.jpg">
-        <img src="img/babka/5.jpg">
-        <img src="img/babka/6.jpg">
+        <img src="img/mda/1.jpg">
     </div>
 
     <div class="footer so-row">
