--- a/work.html
+++ b/work.html
@@ -32,9 +32,40 @@
         </div>
 
         <div class="w-works-all">
+
+            <div class="w-cards">              
+                <div class="w-small-card w-card">
+                    <a href="/mda">
+                        <img class="small-img" src="img/mda/1.jpg">
+                    </a>
+                    <div class="w-works-text">
+                        <p>UI/UX</p>
+                        <a href="/mda"><h3>MDA Express Web Design</h3></a>
+                        <div class="view-case">
+                            <a href="/mda">VIEW CASE
+                            <img src="img/arrow.svg"></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="w-small-card w-card">
+                    <a href="/cls-web">
+                        <img class="small-img" src="img/cls-web/1.jpg">
+                    </a>
+                    <div class="w-works-text">
+                        <p>UI/UX</p>
+                        <a href="/cls-web"><h3>Coleman Legal Services <br> Web Design</h3></a>
+                        <div class="view-case">
+                            <a href="/cls-web">VIEW CASE
+                            <img src="img/arrow.svg"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div class="w-wide-card w-card">
                 <a href="/aes">
-                    <img class="wide-img" src="img/aes/main.jpg">
+                    <img class="wide-img" src="img/aes/1.jpg">
                 </a>
                 <div class="w-works-text">
                     <p>UI/UX</p>
@@ -49,7 +80,7 @@
             <div class="w-cards">
                 <div class="w-small-card w-card">
                     <a href="/babka">
-                        <img class="small-img" src="img/babka/main.jpg">
+                        <img class="small-img" src="img/babka/1.jpg">
                     </a>
                     <div class="w-works-text">
                         <p>Branding & Guidelines</p>
