Updating New projects

--- a/cls-web.html
+++ b/cls-web.html
@@ -26,6 +26,15 @@
 
     <div class="case-images">
         <img src="img/cls-web/1.jpg">
+        <img src="img/cls-web/2.jpg">
+        <img src="img/cls-web/3.jpg">
+        <img src="img/cls-web/4.jpg">
+        <img src="img/cls-web/5.jpg">
+        <img src="img/cls-web/6.jpg">
+        <img src="img/cls-web/7.jpg">
+        <img src="img/cls-web/8.jpg">
+        <img src="img/cls-web/9.jpg">
+        <img src="img/cls-web/10.jpg">
     </div>
 
     <div class="footer so-row">
