--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@
                 </div>
                 
                 <div class="more-works-card">
-                    <a href="/sharing">
-                        <img id="img2" src="img/sharing/1.png">
+                    <a href="/aes">
+                        <img id="img2" src="img/aes/1.jpg">
                     </a>
                     <div class="more-works-text">
                         <p>UI/UX</p>
-                        <a href="/sharing"><h3>Sharing Digital</h3></a>
+                        <a href="/aes"><h3>American Express Shop</h3></a>
                         <div class="view-case">
-                            <a href="/sharing">VIEW CASE
+                            <a href="/aes">VIEW CASE
                             <img src="img/arrow.svg"></a>
                         </div>
                     </div>
@@ -180,24 +180,24 @@
 
             <div class="explore-work">
                 <hr>
-                <a href="/avansbox">
+                <a href="/mda">
                     <div id="exp-1" class="exp-1">
-                        <h1>Avansbox Web Design</h1>
+                        <h1>MDA Express Web Design</h1>
                         <h4>UI/UX</h4>
                     </div>
-                    <img src="img/avansbox/6.jpg" class="follow-img-1">
+                    <img src="img/mda/1.jpg" class="follow-img-1">
                 </a>
             </div>
 
 
             <div class="explore-work">
                 <hr>
-                <a href="/cls">
+                <a href="/cls-web">
                     <div class="exp-2">
-                        <h1>CLS Brand Guidelines</h1>
-                        <h4>Branding & Guidelines</h4>
+                        <h1>Coleman Legal Web Design</h1>
+                        <h4>UI/UX</h4>
                     </div>
-                    <img src="img/fanci/1.jpg" class="follow-img-2">
+                    <img src="img/cls-web/1.jpg" class="follow-img-2">
                 </a>
             </div>
 
