--- a/mda.html
+++ b/mda.html
@@ -26,6 +26,9 @@
 
     <div class="case-images">
         <img src="img/mda/1.jpg">
+        <img src="img/mda/2.jpg">
+        <img src="img/mda/3.jpg">
+        <img src="img/mda/4.jpg">
     </div>
 
     <div class="footer so-row">
