--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
   <title>Marina Orlova</title>
   <meta charset="utf-8">
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/footer.css">
   <link rel="shortcut icon" href="img/navlogo.png" type="image/x-icon">
 </head>
@@ -35,7 +35,7 @@
             <img src="img/fanci/6.jpg">
             <div class="overlay"></div>
             <div class="latest-desc">
-                <p class="annotation">LATSET PROJECT</p>
+                <p class="annotation">LATEST PROJECT</p>
                 <div class="latest-name">
                     <h2 id="show-invisible">Fanci Branding Guidelines</h2>
                     <p id="invisible">explore</p>
@@ -260,7 +260,7 @@
         </div>
 
         <div class="copyright">
-            <p>2022 © Marina Orlova</p>
+            <p>2023 © Maridmi</p>
         </div>
     </div>
 
