--- a/fanci.html
+++ b/fanci.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/footer.css">
   <link rel="shortcut icon" href="img/navlogo.png" type="image/x-icon">
 </head>
@@ -57,7 +57,7 @@
         </div>
 
         <div class="copyright">
-            <p>2022 © Marina Orlova</p>
+            <p>2023 © Maridmi</p>
         </div>
     </div>
 
