Filter categories & new projects

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/footer.css">
   <link rel="shortcut icon" href="img/navlogo.png" type="image/x-icon">
 </head>
 
@@ -61,30 +60,42 @@
 
         <div class="brands">
             <div class="logos">
-                <img src="img/brands/domstroy.png">
-                <img src="img/brands/aes.png">
-                <img style="width: 90px;" src="img/brands/assistent.png">
-                <img src="img/brands/sharing.png">
-                <img src="img/brands/cls.png">
-                <img style="width: 220px;" src="img/brands/fanci.png">
-                <img src="img/brands/avansbox.png">
-                <img src="img/brands/medical.png">
-                <img style="width: 100px;" src="img/brands/diar.png">
-                <!-- <img src="img/brands/otoplenych.png">
-                <img src="img/brands/zaborsk.png"> -->
+                <img src="img/brands/domstroy.svg">
+                <img src="img/brands/a1.svg">
+                <img src="img/brands/borosa.svg">
+                <img src="img/brands/ceyloan.svg">
+                <img src="img/brands/tambadana.svg">
+                <img src="img/brands/silkwool.svg">
+                <img src="img/brands/pinoli.svg">
+                <img src="img/brands/medeq.svg">
+                <img src="img/brands/aes.svg">
+                <img src="img/brands/advokat.svg">
+                <img src="img/brands/sharing.svg">
+                <img src="img/brands/kauris.svg">
+                <img src="img/brands/cls.svg">
+                <img src="img/brands/fanci.svg">
+                <img src="img/brands/avansbox.svg">
+                <img src="img/brands/med.svg">
+                <img src="img/brands/diar.svg">
             </div>
             <div class="logos">
-                <img src="img/brands/domstroy.png">
-                <img src="img/brands/aes.png">
-                <img style="width: 90px;" src="img/brands/assistent.png">
-                <img src="img/brands/sharing.png">
-                <img src="img/brands/cls.png">
-                <img style="width: 220px;" src="img/brands/fanci.png">
-                <img src="img/brands/avansbox.png">
-                <img src="img/brands/medical.png">
-                <img style="width: 100px;" src="img/brands/diar.png">
-                <!-- <img src="img/brands/otoplenych.png">
-                <img src="img/brands/zaborsk.png"> -->
+                <img src="img/brands/domstroy.svg">
+                <img src="img/brands/a1.svg">
+                <img src="img/brands/borosa.svg">
+                <img src="img/brands/ceyloan.svg">
+                <img src="img/brands/tambadana.svg">
+                <img src="img/brands/silkwool.svg">
+                <img src="img/brands/pinoli.svg">
+                <img src="img/brands/medeq.svg">
+                <img src="img/brands/aes.svg">
+                <img src="img/brands/advokat.svg">
+                <img src="img/brands/sharing.svg">
+                <img src="img/brands/kauris.svg">
+                <img src="img/brands/cls.svg">
+                <img src="img/brands/fanci.svg">
+                <img src="img/brands/avansbox.svg">
+                <img src="img/brands/med.svg">
+                <img src="img/brands/diar.svg">
             </div>
         </div>
 
@@ -145,7 +156,7 @@
                 <img src="img/logo.png">
                 <div>
                     <p>learn more</p>
-                    <h3>Logo Design</h3>
+                    <h3>Branding</h3>
                 </div>
             </div>
             </a>
@@ -155,7 +166,7 @@
                 <img src="img/brand.png">
                 <div>
                     <p>learn more</p>
-                    <h3>Branding and Guidelines</h3>
+                    <h3>Graphic design</h3>
                 </div>
             </div>
             </a>
@@ -165,7 +176,7 @@
                 <img src="img/card.png">
                 <div>
                     <p>learn more</p>
-                    <h3>Business Card, Brochure</h3>
+                    <h3>Catalogs & Presentations</h3>
                 </div>
             </div>
             </a>
