--- a/kauris-catalog.html
+++ b/kauris-catalog.html
@@ -24,12 +24,7 @@
     </div>
 
     <div class="case-images">
-        <img src="img/sharing/1.png">
-        <img src="img/sharing/2.gif">
-        <img src="img/sharing/3.gif">
-        <img src="img/sharing/4.gif">
-        <img src="img/sharing/5.gif">
-        <img src="img/sharing/6.gif">
+        <img src="img/kauris-catalog/2.jpg">
     </div>
 
     <div class="footer so-row">
