Work page Mobile

--- a/contact.html
+++ b/contact.html
@@ -36,24 +36,29 @@
             <div>
                 <div class="contact-c">
                     <p>01</p>
-                    <a href="mailto:yarova0marina@gmail.com">yarova0marina@gmail.com</a>
+                    <a href="https://t.me/makotty">Telegram</a>
                 </div>
 
                 <div class="contact-c">
                     <p>02</p>
+                    <a href="https://wa.me/79110180255">WhatsApp</a>
+                </div>
+
+                <div class="contact-c">
+                    <p>03</p>
                     <a href="tel:+79110180255">+7 911 018 02 55</a>
                 </div>
             </div>
 
             <div class="contact-links">
                 <a href="https://www.behance.net/yarova0mar0675">Behance</a>
-                <a href="">Dribble</a>
+                <a href="https://dribbble.com/mari_rina">Dribble</a>
             </div>
         </div>
     </div>
 
     <div class="contact-get so-row">
-        <a href="mailto:yarova0marina@gmail.com">Get in touch</a>
+        <a href="https://t.me/makotty">Get in touch</a>
     </div>
 
     <div class="footer so-row">
@@ -72,7 +77,7 @@
                 <p>Saint Petersburg, Russia</p>
                 <div class="foo-links-row">
                     <a href="https://www.behance.net/yarova0mar0675">Behance</a>
-                    <a href="">Dribble</a>
+                    <a href="https://dribbble.com/mari_rina">Dribble</a>
                 </div>
             </div>
 
