--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 <p>Saint Petersburg, Russia</p>
                 <div class="foo-links-row">
                     <a href="https://www.behance.net/yarova0mar0675">Behance</a>
-                    <a href="">Dribble</a>
+                    <a href="https://dribbble.com/mari_rina">Dribble</a>
                 </div>
             </div>
 
