--- a/work.html
+++ b/work.html
@@ -147,7 +147,7 @@
                 <p>Saint Petersburg, Russia</p>
                 <div class="foo-links-row">
                     <a href="https://www.behance.net/yarova0mar0675">Behance</a>
-                    <a href="">Dribble</a>
+                    <a href="https://dribbble.com/mari_rina">Dribble</a>
                 </div>
             </div>
 
@@ -201,33 +201,5 @@
           });
         }
     </script>
-
-    <!-- <script>
-        $(".hover").mouseleave(
-        function() {
-            $(this).removeClass("hover");
-        }
-        );
-
-
-        function searchName() {
-            var input, filter, ul, div, a, i, txtValue;
-            input = document.getElementById("myInput");
-            filter = input.value.toUpperCase();
-            ul = document.getElementById("myUL");
-            div = ul.getElementsByTagName("div");
-            for (i = 0; i < div.length; i++) {
-                a = div[i].getElementsByTagName("a")[0];
-                txtValue = a.textContent || a.innerText;
-                if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                    div[i].style.display = "";
-                } else {
-                    div[i].style.display = "none";
-                }
-            }
-        }
-    </script> -->
-
-
 </body>
 </html>
