--- a/services.html
+++ b/services.html
@@ -105,9 +105,9 @@
             </div>
 
             <div class="s-card s-c-2">
-                <h2>Logo Design</h2>
-                <p>A good logo should be visually appealing, distinctive, memorable, simple in form, and stand out from the crowd. 
-                    It should match the brand's aesthetics and message. and above all, a great logo should have exceptional conceptualization and execution.
+                <h2>Branding</h2>
+                <p>A brand may include a company’s name, logo, visual identity and messaging, however a brand’s value is much greater than the sum of its parts. 
+                    The emotional and practical responses that audiences develop towards a brand are triggered by fundamental creative elements.
                     <br><br><span>My capabilities:</span>
                 </p>
                 <ul>
@@ -123,15 +123,13 @@
             </div>
 
             <div class="s-card s-c-3">
-                <h2>Branding and Guidelines</h2>
-                <p>A brand may include a company’s name, logo, visual identity and messaging, however a brand’s value is much greater than the sum of its parts. 
-                    The emotional and practical responses that audiences develop towards a brand are triggered by fundamental creative elements.
+                <h2>Graphic design</h2>
+                <p>Graphic design help to communicate with personality, tone, and core messaging of a company. So graphic design is about a strategy. 
                     <br><br><span>My capabilities:</span>
                 </p>
                 <ul>
-                    <li>Brand Visual Identity</li>
-                    <li>Brand Verbal Identity</li>
-                    <li>Brand Guidelines</li>
+                    <li>Packaging design</li>
+                    <li>Billboards and other signage</li>
                 </ul>
 
                 <a href="tel:+79110180255">
@@ -142,15 +140,14 @@
             </div>
 
             <div class="s-card s-c-4">
-                <h2>Business Card, Brochure</h2>
-                <p>A thoughtfully-designed business card is a good way to present the company and share contacts with customers. 
+                <h2>Catalogs & Presentations</h2>
+                <p>Company presentation is a good way to share contacts with customers. 
                     It will build trust in customers and set the business apart from others.
                     <br><br><span>My capabilities:</span>
                 </p>
                 <ul>
-                    <li>Business Cards Design</li>
-                    <li>Brochures Design</li>
-                    <li>Social Media Content Creation</li>
+                    <li>Catalogs design</li>
+                    <li>Presentation development</li>
                 </ul>
 
                 <a href="tel:+79110180255">
@@ -178,7 +175,7 @@
                 <p>Saint Petersburg, Russia</p>
                 <div class="foo-links-row">
                     <a href="https://www.behance.net/yarova0mar0675">Behance</a>
-                    <a href="">Dribble</a>
+                    <a href="https://dribbble.com/mari_rina">Dribble</a>
                 </div>
             </div>
 
