--- a/borosa.html
+++ b/borosa.html
@@ -24,15 +24,13 @@
     </div>
 
     <div class="case-images">
-        <img src="img/mda/1.jpg">
+        <img src="img/borosa/1.jpg">
         <div class="case-link">
-            <a class="case-a" href="https://ru.mdashipping.us/">VISIT WEBSITE</a>
+            <a class="case-a" href="https://borosa.ru/">VISIT WEBSITE</a>
         </div>
-        <img src="img/mda/2.jpg">
-        <img src="img/mda/3.jpg">
-        <img src="img/mda/4.jpg">
+        <img src="img/borosa/2.jpg">
         <div class="case-link">
-            <a class="case-a" href="https://ru.mdashipping.us/">ru.mdashipping.us</a>
+            <a class="case-b" href="https://borosa.ru/">borosa.ru</a>
         </div>
     </div>
 
