--- a/kauris-guideline.html
+++ b/kauris-guideline.html
@@ -24,15 +24,15 @@
     </div>
 
     <div class="case-images">
-        <img src="img/mda/1.jpg">
+        <img src="img/kauris-guideline/2.jpg">
         <div class="case-link">
-            <a class="case-a" href="https://ru.mdashipping.us/">VISIT WEBSITE</a>
+            <a class="case-b" style="color: #fff;" href="#">full version here</a>
         </div>
-        <img src="img/mda/2.jpg">
-        <img src="img/mda/3.jpg">
-        <img src="img/mda/4.jpg">
+        <img src="img/kauris-guideline/3.jpg">
+        <img src="img/kauris-guideline/4.jpg">
+        <img src="img/kauris-guideline/5.jpg">
         <div class="case-link">
-            <a class="case-a" href="https://ru.mdashipping.us/">ru.mdashipping.us</a>
+            <a class="case-b" style="color: #fff;" href="#">Download full version</a>
         </div>
     </div>
 
