--- a/pinoli.html
+++ b/pinoli.html
@@ -24,15 +24,14 @@
     </div>
 
     <div class="case-images">
-        <img src="img/mda/1.jpg">
+        <img src="img/pinoli/1.jpg">
         <div class="case-link">
-            <a class="case-a" href="https://ru.mdashipping.us/">VISIT WEBSITE</a>
+            <a class="case-a" href="https://pinoli.ru/">VISIT WEBSITE</a>
         </div>
-        <img src="img/mda/2.jpg">
-        <img src="img/mda/3.jpg">
-        <img src="img/mda/4.jpg">
+        <img src="img/pinoli/2.jpg">
+        <img src="img/pinoli/3.jpg">
         <div class="case-link">
-            <a class="case-a" href="https://ru.mdashipping.us/">ru.mdashipping.us</a>
+            <a class="case-b" href="https://pinoli.ru/">pinoli.ru</a>
         </div>
     </div>
 
