--- a/assistent.html
+++ b/assistent.html
@@ -24,12 +24,18 @@
     </div>
 
     <div class="case-images">
-        <img src="img/assistent/1.jpg">
+        <img src="img/assistent/1-1.jpg">
+        <div class="case-link">
+            <a class="case-a" href="https://www.assistgroup.plus/">VISIT WEBSITE</a>
+        </div>
         <img src="img/assistent/2.jpg">
         <img src="img/assistent/3.jpg">
         <img src="img/assistent/4.jpg">
         <img src="img/assistent/5.jpg">
         <img src="img/assistent/6.jpg">
+        <div class="case-link">
+            <a class="case-b" href="https://www.assistgroup.plus/">assistgroup.plus</a>
+        </div>
     </div>
 
     <div class="footer so-row">
