--- a/a1.html
+++ b/a1.html
@@ -22,16 +22,14 @@
             <a href="/contact">contact</a>
         </div>
     </div>
+    
+    <div class="case-link">
+        <a class="case-a" href="https://a1agro.ru/" target=”_blank”><button>VISIT WEBSITE</button></a>
+    </div>
 
     <div class="case-images">
         <img src="img/a1/1.jpg">
-        <div class="case-link">
-            <a class="case-a" href="https://a1agro.ru/">VISIT WEBSITE</a>
-        </div>
         <img src="img/a1/2.jpg">
-        <div class="case-link">
-            <a class="case-b" href="https://a1agro.ru/">a1agro.ru</a>
-        </div>
     </div>
 
     <div class="footer so-row">
