--- a/avansbox.html
+++ b/avansbox.html
@@ -22,12 +22,13 @@
             <a href="/contact">contact</a>
         </div>
     </div>
+    
+    <div class="case-link">
+        <a class="case-a" href="https://avansbox.ru/" target=”_blank”><button>VISIT WEBSITE</button></a>
+    </div>
 
     <div class="case-images">
         <img src="img/avansbox/1.jpg">
-        <div class="case-link" style="background-color: #062C41;">
-            <a class="case-a" href="https://avansbox.ru/">VISIT WEBSITE</a>
-        </div>
         <img src="img/avansbox/2.jpg">
         <img src="img/avansbox/3.jpg">
         <img src="img/avansbox/4.jpg">
@@ -37,9 +38,6 @@
         <img src="img/avansbox/8.jpg">
         <img src="img/avansbox/9.jpg">
         <img src="img/avansbox/10.jpg">
-        <div class="case-link" style="background-color: #062C41;">
-            <a class="case-b" href="https://avansbox.ru/">avansbox.ru</a>
-        </div>
     </div>
 
     <div class="footer so-row">
