--- a/borosa.html
+++ b/borosa.html
@@ -23,15 +23,13 @@
         </div>
     </div>
 
+    <div class="case-link">
+        <a class="case-a" href="https://borosa.ru/" target=”_blank”><button>VISIT WEBSITE</button></a>
+    </div>
+
     <div class="case-images">
         <img src="img/borosa/1.jpg">
-        <div class="case-link">
-            <a class="case-a" href="https://borosa.ru/">VISIT WEBSITE</a>
-        </div>
         <img src="img/borosa/2.jpg">
-        <div class="case-link">
-            <a class="case-b" href="https://borosa.ru/">borosa.ru</a>
-        </div>
     </div>
 
     <div class="footer so-row">
