--- a/cls-web.html
+++ b/cls-web.html
@@ -22,12 +22,13 @@
             <a href="/contact">contact</a>
         </div>
     </div>
+    
+    <div class="case-link">
+        <a class="case-a" href="https://coleman-legal.ru/" target=”_blank”><button>VISIT WEBSITE</button></a>
+    </div>
 
     <div class="case-images">
         <img src="img/cls-web/1.jpg">
-        <div class="case-link">
-            <a class="case-a" href="https://coleman-legal.ru/">VISIT WEBSITE</a>
-        </div>
         <img src="img/cls-web/2.jpg">
         <img src="img/cls-web/3.jpg">
         <img src="img/cls-web/4.jpg">
@@ -37,9 +38,6 @@
         <img src="img/cls-web/8.jpg">
         <img src="img/cls-web/9.jpg">
         <img src="img/cls-web/10.jpg">
-        <div class="case-link">
-            <a class="case-a" href="https://coleman-legal.ru/">coleman-legal.ru</a>
-        </div>
     </div>
 
     <div class="footer so-row">
