--- a/cls.html
+++ b/cls.html
@@ -22,6 +22,10 @@
             <a href="/contact">contact</a>
         </div>
     </div>
+    
+    <div class="case-link">
+        <a class="case-a" href="https://drive.google.com/file/d/1aZzb5BqmHzjIvHBST45kOo3svPzNUQSG/view?usp=sharing" target=”_blank”><button>FULL VERSION HERE</button></a>
+    </div>
 
     <div class="case-images">
         <img src="img/cls/1.jpg">
