--- a/kauris-catalog.html
+++ b/kauris-catalog.html
@@ -22,9 +22,14 @@
             <a href="/contact">contact</a>
         </div>
     </div>
+    
+    <div class="case-link">
+        <a class="case-a" href="https://drive.google.com/file/d/19eVHznuUJW7iix-oZ3Gzz4Pmvvi1bCg-/view?usp=sharing" target=”_blank”><button>FULL VERSION HERE</button></a>
+    </div>
 
     <div class="case-images">
         <img src="img/kauris-catalog/2.jpg">
+        <img src="img/kauris-catalog/3.jpg">
     </div>
 
     <div class="footer so-row">
