--- a/kauris-guideline.html
+++ b/kauris-guideline.html
@@ -22,18 +22,16 @@
             <a href="/contact">contact</a>
         </div>
     </div>
+    
+    <div class="case-link">
+        <a class="case-a" href="https://drive.google.com/file/d/1jfcvRcIBOm-qzElESMlK2I0zALSXIHcy/view?usp=sharing" target=”_blank”><button>FULL VERSOIN HERE</button></a>
+    </div>
 
     <div class="case-images">
         <img src="img/kauris-guideline/2.jpg">
-        <div class="case-link">
-            <a class="case-b" style="color: #fff;" href="#">full version here</a>
-        </div>
         <img src="img/kauris-guideline/3.jpg">
         <img src="img/kauris-guideline/4.jpg">
         <img src="img/kauris-guideline/5.jpg">
-        <div class="case-link">
-            <a class="case-b" style="color: #fff;" href="#">Download full version</a>
-        </div>
     </div>
 
     <div class="footer so-row">
