--- a/mda.html
+++ b/mda.html
@@ -22,18 +22,16 @@
             <a href="/contact">contact</a>
         </div>
     </div>
+    
+    <div class="case-link">
+        <a class="case-a" href="https://ru.mdashipping.us/" target=”_blank”><button>VISIT WEBSITE</button></a>
+    </div>
 
     <div class="case-images">
         <img src="img/mda/1.jpg">
-        <div class="case-link">
-            <a class="case-a" href="https://ru.mdashipping.us/">VISIT WEBSITE</a>
-        </div>
         <img src="img/mda/2.jpg">
         <img src="img/mda/3.jpg">
         <img src="img/mda/4.jpg">
-        <div class="case-link">
-            <a class="case-a" href="https://ru.mdashipping.us/">ru.mdashipping.us</a>
-        </div>
     </div>
 
     <div class="footer so-row">
