--- a/pinoli.html
+++ b/pinoli.html
@@ -22,17 +22,15 @@
             <a href="/contact">contact</a>
         </div>
     </div>
+    
+    <div class="case-link">
+        <a class="case-a" href="https://pinoli.ru/" target=”_blank”><button>VISIT WEBSITE</button></a>
+    </div>
 
     <div class="case-images">
         <img src="img/pinoli/1.jpg">
-        <div class="case-link">
-            <a class="case-a" href="https://pinoli.ru/">VISIT WEBSITE</a>
-        </div>
         <img src="img/pinoli/2.jpg">
         <img src="img/pinoli/3.jpg">
-        <div class="case-link">
-            <a class="case-b" href="https://pinoli.ru/">pinoli.ru</a>
-        </div>
     </div>
 
     <div class="footer so-row">
