--- a/babka.html
+++ b/babka.html
@@ -22,6 +22,10 @@
             <a href="/contact">contact</a>
         </div>
     </div>
+    
+    <!-- <div class="case-link">
+        <a class="case-a" href="#" target=”_blank”><button>FULL VERSION HERE</button></a>
+    </div> -->
 
     <div class="case-images">
         <img src="img/babka/1.jpg">
