--- a/fanci.html
+++ b/fanci.html
@@ -22,6 +22,10 @@
             <a href="/contact">contact</a>
         </div>
     </div>
+    
+    <div class="case-link">
+        <a class="case-a" href="https://drive.google.com/file/d/1JVIgIfYjuPPJtnC-Up6x1F4V6hiUGU_l/view?usp=sharing" target=”_blank”><button>FULL VERSION HERE</button></a>
+    </div>
 
     <div class="case-images">
         <img src="img/fanci/1.jpg">
