--- a/medeq.html
+++ b/medeq.html
@@ -22,9 +22,14 @@
             <a href="/contact">contact</a>
         </div>
     </div>
+    
+    <div class="case-link">
+        <a class="case-a" href="https://drive.google.com/file/d/1-3Ko3d4dc0UYCAUJXcAUk5RaqJoDA_8F/view?usp=sharing" target=”_blank”><button>FULL VERSION HERE</button></a>
+    </div>
 
     <div class="case-images">
         <img src="img/medeq/2.jpg">
+        <img src="img/medeq/3.jpg">
     </div>
 
     <div class="footer so-row">
