--- a/otoplenych.html
+++ b/otoplenych.html
@@ -22,16 +22,14 @@
             <a href="/contact">contact</a>
         </div>
     </div>
+    
+    <div class="case-link">
+        <a class="case-a" href="https://otoplenych.ru/" target=”_blank”><button>VISIT WEBSITE</button></a>
+    </div>
 
     <div class="case-images">
         <img src="img/otoplenych/2.jpg">
-        <div class="case-link">
-            <a class="case-a" href="https://otoplenych.ru/">VISIT WEBSITE</a>
-        </div>
         <img src="img/otoplenych/3.jpg">
-        <div class="case-link">
-            <a class="case-b" href="https://otoplenych.ru/">otoplenych.ru</a>
-        </div>
     </div>
 
     <div class="footer so-row">
