--- a/index.html
+++ b/index.html
@@ -214,12 +214,12 @@
 
             <div class="explore-work">
                 <hr>
-                <a href="/babka">
+                <a href="/kauris-catalog">
                     <div class="exp-3">
-                        <h1>Babka Bakery Brand Guidelines</h1>
-                        <h4>Branding & Guidelines</h4>
+                        <h1>Kauris Fashion Catalog</h1>
+                        <h4>Catalog</h4>
                     </div>
-                    <img src="img/babka/1.jpg" class="follow-img-3">
+                    <img src="img/kauris-catalog/1.jpg" class="follow-img-3">
                 </a>
                 <hr>
             </div>
